projeto 011: commit final

--- a/proj004/index.html
+++ b/proj004/index.html
@@ -17,7 +17,7 @@
         </li>
 
         <li class="done">
-            <a href="../proj002/">projeto 002</a>
+            <a href="../proj002/design/">projeto 002</a>
         </li>
 
         <li class="done">
